# qgate-sln-mlrun

./: .coveragerc  .gitignore  README.md  dependabot.yml  dev-requirements.txt  main.py  mlrun-nonprod.env  project.yaml  publish.bat  publish.sh  pyproject.toml  qgate-mlrun-private.env  qgate-mlrun.env  qgate-sln-mlrun-private.env  qgate-sln-mlrun.env  requirements.txt
assets/: gate-01-basic-party.json  gate-02-basic-account.json  gate-03-basic-transaction.json  gate-11-aggregate-party.json
assets/templates/: qgt-mlrun.html  qgt-mlrun.txt
docker/: mlrun-cassandra.sh  mlrun-kafka.sh  mlrun-mysql.sh  mlrun-postgres.sh  mlrun-redis.sh  mlrun-runall.sh  mlrun-scylla.sh  mlrun-startall.sh  mlrun.sh
docs/: applied-limits.md  cassandra.md  config_in_docker.md  configuration.md  desktopdocker.md  ingest_issues.md  kafka.md  mlrun-history.md  mlrun-iguazio-release-notes.md  model-changes.md  mysql.md  postgres.md  pyenv-install.md  pyenv-use.md  pyenv.md  redis.md  scylla.md  spark.md  testing.md  todo_list.md
docs/samples/outputs/: qgt-mlrun-2023-12-08 07-56-28.html  qgt-mlrun-2023-12-08 07-56-28.txt  qgt-mlrun-sample-err.html  qgt-mlrun-sample-err.txt  qgt-mlrun-sample.html  qgt-mlrun-sample.txt
qgate/: modelsolution.py  nsolution.py  output.py  output_template.py  project.py  setup.py  solution.py  version.py
qgate/templates/: qgt-mlrun.html  qgt-mlrun.txt
qgate/ts/: ts101.py  ts102.py  ts201.py  ts301.py  ts401.py  ts501.py  ts601.py  tsbase.py
qgate/uc/: __init__.py  ts101.py  ts102.py  ts201.py  ts301.py  ts401.py  ts501.py  ts601.py  tsbase.py  uc101.py  uc102.py  uc201.py  uc202.py  uc301.py  uc401.py  uc501.py  uc601.py  ucbase.py  ucoutput.py  ucsetup.py
qgate_sln_mlrun/: kafkahelper.py  modelsetup.py  modelsolution.py  mysqlhelper.py  output.py  qualityreport.py  setup.py  version.py
qgate_sln_mlrun/helper/: __init__.py  basehelper.py  featuresethelper.py  generateid.py  kafkahelper.py  mysqlhelper.py  pipelinehelper.py
qgate_sln_mlrun/model_changes/: __init__.py
qgate_sln_mlrun/templates/: qgt-mlrun.html  qgt-mlrun.txt
qgate_sln_mlrun/ts/: ts101.py  ts102.py  ts201.py  ts202.py  ts203.py  ts204.py  ts205.py  ts206.py  ts301.py  ts302.py  ts303.py  ts304.py  ts401.py  ts501.py  ts502.py  ts601.py  ts701.py  ts801.py  tsbase.py  tshelper.py
tests/: test_common.py  test_projects.py
(+57 files in other folders)
